--- a/Something Management Program Remastered/App.xaml
+++ b/Something Management Program Remastered/App.xaml
@@ -1,8 +1,7 @@
 ﻿<Application x:Class="Something_Management_Program_Remastered.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:Something_Management_Program_Remastered"
-             StartupUri="MainWindow.xaml">
+             xmlns:local="clr-namespace:Something_Management_Program_Remastered">
     <Application.Resources>
          
     </Application.Resources>
