Added a modifiers listview and textboxes to change properties

--- a/Something Management Program Remastered/View/MainPage.xaml
+++ b/Something Management Program Remastered/View/MainPage.xaml
@@ -13,20 +13,20 @@
         </Grid.ColumnDefinitions>
 
         <Grid.RowDefinitions>
-            <RowDefinition Height="Auto"/>
+            <RowDefinition/>
             <RowDefinition/>
         </Grid.RowDefinitions>
 
-        <ListView x:Name="ObjectiveValueCollectionListView" Grid.Column="1" MaxHeight="156" SelectedItem="{Binding SelectedObjectiveValue}" ItemsSource="{Binding ObjectiveValueCollection}" BorderBrush="{x:Null}" IsSynchronizedWithCurrentItem="True" MinHeight="100" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" VerticalAlignment="Top" >
+        <ListView x:Name="ObjectiveValueCollectionListView" SelectedItem="{Binding SelectedObjectiveValue}" ItemsSource="{Binding ObjectiveValueCollection}" BorderBrush="{x:Null}" IsSynchronizedWithCurrentItem="True" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" VerticalAlignment="Bottom" Grid.Column="1" Height="175" >
             <ListView.View>
-                 <GridView>
+                <GridView>
                     <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" ></GridViewColumn>
                     <GridViewColumn Header="Amount" DisplayMemberBinding="{Binding Amount}" ></GridViewColumn>
                     <GridViewColumn Header="Type" DisplayMemberBinding="{Binding Type}" ></GridViewColumn>
                     <GridViewColumn Header="Description" DisplayMemberBinding="{Binding Description}" ></GridViewColumn>
                     <GridViewColumn Header="Current Set Time" DisplayMemberBinding="{Binding CurrentTime}" ></GridViewColumn>
-                 </GridView>
-             </ListView.View>
+                </GridView>
+            </ListView.View>
         </ListView>
 
         <Grid Margin="5,5,5,5">
@@ -41,7 +41,7 @@
                 <Label Content="Amount:" FontFamily="Cascadia Code SemiBold"/>
                 <Label Content="Type:" FontFamily="Cascadia Code SemiBold"/>
                 <Label Content="currentTime:" FontFamily="Cascadia Code SemiBold"/>
-                <Button Content="New Value" Margin="3,4,3,3" Command="{Binding NewObjectviveValueCommand}" FontFamily="Bahnschrift SemiCondensed" FontSize="16" MinWidth="80" BorderBrush="{x:Null}" Background="#FF6BED85" />
+                <Button Content="New Value" Margin="3,4,3,3" Command="{Binding NewObjectiveValueCommand}" FontFamily="Bahnschrift SemiCondensed" FontSize="16" MinWidth="80" BorderBrush="{x:Null}" Background="#FF6BED85" />
             </StackPanel>
 
             <StackPanel Grid.Column="1" >
@@ -50,11 +50,11 @@
                 <TextBox MinWidth="125" MinHeight="20" Margin="0,2,0,2" Text="{Binding SelectedObjectiveValue.Amount, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="ObjectiveValueAmount"/>
                 <TextBox MinWidth="125" MinHeight="20" Margin="0,2,0,2" Text="{Binding SelectedObjectiveValue.Type, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="ObjectiveValueType"/>
                 <TextBox MinWidth="125" MinHeight="20" Margin="0,2,0,2" Text="{Binding SelectedObjectiveValue.CurrentTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="ObjectiveValueCurrentTime"/>
-                <Button Content="Delete" Margin="3,4,3,3" Command="{Binding DeleteObjectviveValueCommand}" FontFamily="Bahnschrift SemiCondensed" FontSize="16" MinWidth="80" BorderBrush="{x:Null}" Background="#FFFB4D4D" />
+                <Button Content="Delete" Margin="3,4,3,3" Command="{Binding DeleteObjectiveValueCommand}" FontFamily="Bahnschrift SemiCondensed" FontSize="16" MinWidth="80" BorderBrush="{x:Null}" Background="#FFFB4D4D" />
             </StackPanel>
         </Grid>
 
-        <ListView x:Name="ModifierCollectionListView" Grid.Column="1" Grid.Row="1" MaxHeight="156" SelectedItem="{Binding SelectedObjectiveValue}" ItemsSource="{Binding ObjectiveValueCollection}" BorderBrush="{x:Null}" IsSynchronizedWithCurrentItem="True" MinHeight="100" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" VerticalAlignment="Top" >
+        <ListView x:Name="ModifierCollectionListView" Grid.Column="1" Grid.Row="1" SelectedItem="{Binding SelectedModifier}" ItemsSource="{Binding SelectedObjectiveValue.Modifiers}" BorderBrush="{x:Null}" IsSynchronizedWithCurrentItem="True" ScrollViewer.VerticalScrollBarVisibility="Auto" ScrollViewer.HorizontalScrollBarVisibility="Auto" >
             <ListView.View>
                 <GridView>
                     <GridViewColumn Header="Name" DisplayMemberBinding="{Binding Name}" ></GridViewColumn>
@@ -66,6 +66,29 @@
             </ListView.View>
         </ListView>
 
-    </Grid>
+        <Grid Grid.Row="1" Margin="5,5,5,5">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition/>
+                <ColumnDefinition/>
+            </Grid.ColumnDefinitions>
 
+            <StackPanel >
+                <Label Content="Name:" FontFamily="Cascadia Code SemiBold"/>
+                <Label Content="Description:" FontFamily="Cascadia Code SemiBold" VerticalContentAlignment="Center" Margin="0,15,0,15"/>
+                <Label Content="Amount:" FontFamily="Cascadia Code SemiBold"/>
+                <Label Content="Type:" FontFamily="Cascadia Code SemiBold"/>
+                <Label Content="currentTime:" FontFamily="Cascadia Code SemiBold"/>
+                <Button Content="New Value" Margin="3,4,3,3" Command="{Binding NewModifierCommand}" FontFamily="Bahnschrift SemiCondensed" FontSize="16" MinWidth="80" BorderBrush="{x:Null}" Background="#FF6BED85" />
+            </StackPanel>
+
+            <StackPanel Grid.Column="1" >
+                <TextBox MinWidth="125" MinHeight="20" Margin="0,2,0,2" Text="{Binding SelectedModifier.Name, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="ModifierName"/>
+                <TextBox MinWidth="125" MinHeight="50" Margin="0,2,0,2" Text="{Binding SelectedModifier.Description, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="ModifierDescription"/>
+                <TextBox MinWidth="125" MinHeight="20" Margin="0,2,0,2" Text="{Binding SelectedModifier.Amount, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="ModifierAmount"/>
+                <TextBox MinWidth="125" MinHeight="20" Margin="0,2,0,2" Text="{Binding SelectedModifier.ModType, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="ModifierType"/>
+                <TextBox MinWidth="125" MinHeight="20" Margin="0,2,0,2" Text="{Binding SelectedModifier.CurrentTime, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}" x:Name="ModifierCurrentTime"/>
+                <Button Content="Delete" Margin="3,4,3,3" Command="{Binding DeleteModifierCommand}" FontFamily="Bahnschrift SemiCondensed" FontSize="16" MinWidth="80" BorderBrush="{x:Null}" Background="#FFFB4D4D" />
+            </StackPanel>
+        </Grid>
+    </Grid>
 </Window>
